# apktriage

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: secret_scanning.yml
.github/workflows/: ci.yml
examples/: README.md
src/apktriage/: __init__.py  attack_map.py  cli.py  dex_analysis.py  indicators.py  logging.py  models.py  native.py  packers.py  pipeline.py  report.py  secrets.py  unpack.py  yara_gen.py
src/apktriage/data/: attack_mobile.yml  secret_patterns.yml
tests/: conftest.py  test_attack_map.py  test_corpus.py  test_indicators.py  test_models.py  test_native.py  test_packers.py  test_pipeline.py  test_secrets.py  test_yara_gen.py
tests/corpus/: README.md  corpus.lock.json  fetch.py  manifest.yml
tests/fixtures/: README.md  benign_sample.apk  build_fixture.sh
tests/fixtures/src/: AndroidManifest.xml  apktool.yml  libdemo.c
tests/fixtures/src/smali/com/example/triagedemo/: MainActivity.smali
