[project]
name = "apktriage"
version = "0.1.0"
description = "Static APK reverse-engineering and triage toolkit: unpack, decompile, hunt secrets and C2 indicators, generate YARA, map to MITRE ATT&CK Mobile."
requires-python = ">=3.11,<3.13"
readme = "README.md"
authors = [
    { name = "Goutham Prasanth Pamarthy", email = "pamarthygp@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "androguard~=4.1",
    "lief~=0.15",
    # yara-python-dex is rednaga's yara fork: same `yara` API as yara-python
    # plus the `dex` module APKiD's precompiled rules require. Using it as the
    # single yara provider avoids the two-binding conflict between the stock
    # yara-python and the one APKiD ships its rules against.
    "yara-python-dex~=1.0",
    "typer~=0.12",
    "rich~=13.9",
    "pyyaml~=6.0",
    "structlog~=24.4",
]

[project.optional-dependencies]
packers = [
    "apkid~=2.1",
]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "ruff~=0.8",
    "mypy~=1.13",
    "pre-commit~=4.0",
    "types-PyYAML",
]
all = [
    "apktriage[packers,dev]",
]

[project.scripts]
apktriage = "apktriage.cli:main"

[project.urls]
Source = "https://github.com/gpamarthy/apktriage"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apktriage"]

[tool.hatch.build.targets.wheel.force-include]
"src/apktriage/data" = "apktriage/data"

[tool.hatch.build.targets.sdist]
include = ["src/apktriage", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
# Corpus tests are network-fetched + slow; deselect by default so `make test`
# stays offline and deterministic. Run them explicitly via `make corpus`.
addopts = "-ra --strict-markers --strict-config --tb=short -m 'not corpus'"
markers = [
    "integration: end-to-end pipeline tests against the committed fixture APK",
    "corpus: validation against real downloaded APKs (opt-in, needs `fetch.py`)",
]

[tool.coverage.run]
source = ["apktriage"]
branch = true
